# rulez

./: Cargo.toml  README.md
level/: level1.ron  level2.ron  level3.ron  level4.ron
src/: automaton.rs  cursor_pos.rs  field.rs  game.rs  game_state.rs  level.rs  logic.rs  main.rs  playing_ui.rs  rule.rs  ui.rs
